develop (#50)
* feat: request handler (#22)

* feat: request handler

* fix: remove timeout

* url list message (#23)

* feat: request handler

* fix: remove timeout

* feat: url list message

* admin setup (#24)

* fix: remove trailing / or #

* feat: global properties

* feat: title and description fetching

* chore: format and unused file

* feat: admin setup

* feat: wrapper classes for search results

* feat: top searches

* feat: needed instances

* Search (#25)

Co-authored-by: Tiago Silva <56562221+tmdbts@users.noreply.github.com>

* Search almost finished (#26)

* Search almost finished

* Search almost finished_2

* fix: list properties

* fix: change url info location

* fix: test barrel name

* search done (#27)

* docs (#28)

* doc: document full code base

* doc: generate documentation

* chore: idea stuff

* final (#29)

Co-authored-by: Tiago Silva <56562221+tmdbts@users.noreply.github.com>

* chore: create README

The read me has build and run instructions

* fix: make sure thread is cleaned after dying

some other cleanups where made

* chore: upgrade compiler plugin version

* chore: suppress some comments; general cleanup

* fix: missing imports

* fix: increase receiver buffer

* url reader (#31)

* misc/sd_checklist_meta1_2024.pdf

* chore: cleanup

* search-result-fixed (#32)

* feat: client monitor

* chore: notes

* web-interface (#34)

* pom-mvnw

* refactor: serach resutl now returns a specific class (#36)

* thymeleaf (#37)

* fix: message parsing

* fix: commit had missing ')'

* TODO:Paging (#40)

* Revert "TODO:Paging (#40)" (#41)

This reverts commit 64e7c8b0dc82d512bd8fdfbeb6b6fa1bd9a2f49c.

* feat: search interface (#42)

* TODO:Paging

* Paging and error handler missing

* feat: monitor interface (#43)

* Paging-Done (#44)

* try: websockets (#45)

* wip: hacker news top stories (#46)

* docs (#47)

* chore: do